--- a/css/styles.css
+++ b/css/styles.css
@@ -282,7 +282,7 @@ a.white {
 	padding-left: 1.3125rem;
 	border: 1px solid #9791ae;
 	border-radius: 0.25rem;
-	background-color: #413d52;
+	background-color: #567070;
 	color: #f1f1f8;
 	font: 400 0.875rem/1.875rem "Open Sans", sans-serif;
 	transition: all 0.2s ease;
@@ -336,7 +336,7 @@ select::-ms-expand {
 	padding-left: 1.3125rem;
 	border: 1px solid #9791ae;
 	border-radius: 0.25rem;
-	background-color: #413d52;
+	background-color: #567070;
 	color: #f1f1f8;
 	font: 400 0.875rem/1.75rem "Open Sans", sans-serif;
 	transition: all 0.2s ease;
@@ -583,7 +583,7 @@ input[type='checkbox'] {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	background: #2f2c3d;
+	background: #40e0ee;
 }
 
 .spinner {
@@ -761,7 +761,7 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(to bottom right, rgba(72, 72, 212, 0), rgba(241, 104, 104, 0)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(to bottom right, rgba(72, 72, 212, 0), rgba(241, 104, 104, 0)), url('../images/desarrollador-web.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -799,7 +799,7 @@ input[type='checkbox'] {
 .slider-1 {
 	padding-top: 6.875rem;
 	padding-bottom: 6.375rem;
-	background-color: #262431;
+	background-color: #1e2e2e;
 }
 
 .slider-1 .slider-container {
@@ -860,7 +860,7 @@ input[type='checkbox'] {
 .tabs {
 	padding-top: 6.5rem;
 	padding-bottom: 4.25rem;
-	background-color: #2f2c3d;
+	background-color: #1e2e2e;
 }
 
 .tabs h2 {
@@ -1235,7 +1235,7 @@ input[type='checkbox'] {
 .slider-2 {
 	padding-top: 6.875rem;
 	padding-bottom: 6.875rem;
-	background-color: #2f2c3d;
+	background-color: #4a6b6b;
 }
 
 .slider-2 .slider-container {
@@ -1308,7 +1308,7 @@ input[type='checkbox'] {
 .counter {
 	padding-top: 6.5rem;
 	padding-bottom: 5.375rem;
-	background-color: #262431;
+	background-color: #365252;
 	text-align: center;
 }
 
@@ -1329,7 +1329,8 @@ input[type='checkbox'] {
 .counter #counter .counter-info {
 	margin-bottom: 0;
 	color: #00c9db;
-	font: 400 0.875rem/1.25rem "Open Sans", sans-serif;
+
+	font: 400 1.5rem/2.25rem "Open Sans", sans-serif;
 	vertical-align: middle;
 }
 
@@ -1340,7 +1341,8 @@ input[type='checkbox'] {
 .form {
 	padding-top: 6.25rem;
 	padding-bottom: 5.625rem;
-	background: url('../images/contact-background.jpg') center bottom no-repeat;
+	
+	background-color: #567070;
 	background-size: cover; 
 }
 
@@ -1373,7 +1375,7 @@ input[type='checkbox'] {
 /**********************/
 .footer {
 	padding-top: 5rem;
-	background-color: #262431;
+	background-color: #1e2e2e;
 }
 
 .footer .footer-col {
@@ -1425,7 +1427,7 @@ input[type='checkbox'] {
 .copyright {
 	padding-top: 1rem;
 	padding-bottom: 0.5rem;
-	background-color: #262431;
+	background-color: #1e2e2e;
 	text-align: center;
 }
 
@@ -1579,7 +1581,7 @@ a:hover.back-to-top {
 	.navbar-custom.top-nav-collapse {
         padding: 0.5rem 1.5rem 0.5rem 2rem;
 		box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
-		background-color: #4633af;
+		background-color: #1e2e2e;
 	}
 
 	.navbar-custom.top-nav-collapse .navbar-brand.logo-text {
